--- a/dev/scss/modules/_base.scss
+++ b/dev/scss/modules/_base.scss
@@ -56,7 +56,7 @@ h3{
 h4{
     font:{
         family: $font2;
-        size: 0.75em;
+        size: 0.9em;
         weight:500;
     }
     color:$brand1;
@@ -84,11 +84,12 @@ h6{
 p{ 
     font:{
         family: $font2;
-        size: 0.65em;
+        size: 0.8em;
         weight:$regular;
     }
     margin:0;
     color: $gray1; 
+    max-width: 600px;
 }
 
 a, button{
