--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -67,8 +67,9 @@ header{
 		    margin:0;
 	        box-sizing: border-box;
 		    transform: translateX(100vw);
-		    transition: transform 1s ease;
+		    transition: all 1s ease;
 		    text-align: center;
+		    opacity: 0;
 		    li{
 		    	padding: 20px 10px;
 		    	position:relative;
@@ -109,12 +110,25 @@ header{
 
 			    }
 		    }
+
+		    &.active{
+				transform: translateX(0);    	
+				opacity: 1;
+		    }
 		}
 
 		#hamburger{
 			display: grid;
 			position: relative;
 		    z-index: 100;
+		    height:30px;
+		    width: 30px;
+	        box-sizing: content-box;
+	        svg{
+	        	height:24px;
+	        	width: 24px;
+        	    margin: auto;
+	        }
 		}
 		@include MQ($M){
 			position: absolute;
