--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -1,179 +1,196 @@
-header{
-	background-color:$white;
-    height: 100px;
+header {
+	background-color: $white;
+	height: 100px;
 	width: 100vw;
 	position: fixed;
-	top:0;
+	top: 0;
 	display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 5vw;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	box-sizing: border-box;
+	padding: $gutterh;
 
-	#sticky{ 
+	#sticky {
 		position: relative;
 		justify-content: start;
 		display: grid;
 		grid-auto-rows: auto;
- 		box-sizing: border-box;
-		#social{
+		box-sizing: border-box;
+
+		#social {
 			display: none;
 			grid-auto-rows: 50px;
-		    align-content: end;
+			align-content: end;
 		}
 
-		img{
-			height:40px;
-			@include MQ($M){
+		img {
+			height: 40px;
+
+			@include MQ($M) {
 				height: inherit;
 			}
 		}
 
-		@include MQ($M){
+		@include MQ($M) {
 			width: 100px;
-			height:100vh;
+			height: 100vh;
 			padding: 50px 0;
 			background: url('../../assets/svg/stickyBg.svg');
-		    background-position: top center;
-		    background-repeat: no-repeat;
-		    background-size: cover;
-		    position: fixed;
-    		left:0px;
-			top:0px;
+			background-position: top center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			position: fixed;
+			left: 0px;
+			top: 0px;
 			justify-content: center;
-		    #social, a{
-		    	display: grid;
-		    }
+
+			#social,
+			a {
+				display: grid;
+			}
 		}
 	}
-	nav{
+
+	nav {
 		position: relative;
 		display: grid;
 		justify-content: end;
-		
 
-		ul{
+
+		ul {
 			display: grid;
-		    grid-auto-flow: row;
-		    align-items: center;
-	        position: fixed;
-		    left: 0;
-		    top: 100px;
-		    padding: 5vh;
-		    width: 100vw;
-		    grid-template-columns: 1fr;
-		    grid-auto-rows: auto;
-		    background-color: white;
-		    box-shadow: $box-shadow;
-		    margin:0;
-	        box-sizing: border-box;
-		    transform: translateX(100vw);
-		    transition: all 1s ease;
-		    text-align: center;
-		    opacity: 0;
-		    li{
-		    	padding: 20px 10px;
-		    	position:relative;
-		    	a{
-		    		font:{
-		    			weight: $semibold;
-		    			size:1em;
-		    		}
-		    		color: $gray2;
-		    		transition: all 0.3s ease;
-		    		&.active{
-			    		font:{
-			    			weight: $extrabold;
-			    		}
-			    	}
+			grid-auto-flow: row;
+			align-items: center;
+			position: fixed;
+			left: 0;
+			top: 100px;
+			padding: 5vh;
+			width: 100vw;
+			grid-template-columns: 1fr;
+			grid-auto-rows: auto;
+			background-color: white;
+			box-shadow: $box-shadow;
+			margin: 0;
+			box-sizing: border-box;
+			transform: translateX(100vw);
+			transition: all 1s ease;
+			text-align: center;
+			opacity: 0;
 
-			    	&:hover{
-			    		text-decoration: underline;
-			    	}
-		    	}
+			li {
+				padding: 20px 10px;
+				position: relative;
 
-		    	
-		    }
+				a {
+					font: {
+						weight: $semibold;
+						size: 1em;
+					}
 
-		    .dropdown-menu{
-		    	display: none;
-		    	
-	    	    
-			    overflow-y: auto;
-			    opacity: 0;
-			    
-	    		.dropdown-item{
-			    	padding: 15px;
-			    	font:{
-		    			weight: $regular;
-		    		}
-			    }
-			    &.active{
-			    	display: grid;
-			    	opacity:1;
-			    }
-			    @include MQ($M){
-			    	position: absolute;
-				    left: 0;
-				    top: 50px;
-				    z-index: 9999;
-				    background-color:$white;
-				    margin-left: -20px;
-				    min-width: 250px;
+					color: $gray2;
+					transition: all 0.3s ease;
 
-			    }
-		    }
+					&.active {
+						font: {
+							weight: $extrabold;
+						}
+					}
 
-		    &.active{
-				transform: translateX(0);    	
+					&:hover {
+						text-decoration: underline;
+					}
+				}
+
+
+			}
+
+			.dropdown-menu {
+				display: none;
+
+
+				overflow-y: auto;
+				opacity: 0;
+
+				.dropdown-item {
+					padding: 15px;
+
+					font: {
+						weight: $regular;
+					}
+				}
+
+				&.active {
+					display: grid;
+					opacity: 1;
+				}
+
+				@include MQ($M) {
+					position: absolute;
+					left: 0;
+					top: 50px;
+					z-index: 9999;
+					background-color: $white;
+					margin-left: -20px;
+					min-width: 250px;
+
+				}
+			}
+
+			&.active {
+				transform: translateX(0);
 				opacity: 1;
-		    }
+			}
 		}
 
-		#hamburger{
+		#hamburger {
 			display: grid;
 			position: relative;
-		    z-index: 100;
-		    height:30px;
-		    width: 30px;
-	        box-sizing: content-box;
-	        svg{
-	        	height:24px;
-	        	width: 24px;
-        	    margin: auto;
-	        }
-		}
-		@include MQ($M){
-			position: absolute;
-			right: $gutterw; 
-			#hamburger{
-				display: none;
-				position: fixed; 
-				right: 5vw;
-			    top: 5vw;
+			z-index: 100;
+			height: 30px;
+			width: 30px;
+			box-sizing: content-box;
+
+			svg {
+				height: 24px;
+				width: 24px;
+				margin: auto;
 			}
-			ul{
+		}
+
+		@include MQ($M) {
+			position: absolute;
+			right: $gutterw;
+
+			#hamburger {
+				display: none;
+				position: fixed;
+				right: 5vw;
+				top: 5vw;
+			}
+
+			ul {
 				transform: translateX(0px);
-				grid-gap: $gutterw / 2;
-			    grid-auto-flow: column;
-			    width: calc(100vw - 200px);
-			    background-color: inherit;
-			    width: inherit;
-			    padding: inherit;
-			    position: initial;
-			    box-shadow:none;
-			    top: 0;
-			    right: 0;
-			    text-align: left;
-			    opacity: 1;
+				grid-gap: 20px;
+				grid-auto-flow: column;
+				width: calc(100vw - 200px);
+				background-color: inherit;
+				width: inherit;
+				padding: inherit;
+				position: initial;
+				box-shadow: none;
+				top: 0;
+				right: 0;
+				text-align: left;
+				opacity: 1;
 			}
 		}
 	}
+
 	@include MQ($M) {
 		background-color: inherit;
 		height: inherit;
 		width: inherit;
 		position: absolute;
-	    height: inherit;
+		height: inherit;
 	}
 }
