--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -38,7 +38,7 @@ html{
 ------------------------------------------------*/
 
 #enterence{
-	margin-top: 100px;
+	
 	background: url('../../assets/svg/enterenceBg.svg');
 	background-position: center right;
     background-size: contain;
@@ -106,7 +106,6 @@ html{
 	padding-top:$gutterh * 3;
 	.container{
 		justify-items: center;
-		grid-gap:$gutterh; 
 	}
 	#threeProf{
 		display: grid;
@@ -151,6 +150,7 @@ html{
 #testimonials{
 	.container{
 	    justify-items: center;
+	    grid-gap:$gutterh/4;
 	    h3{
 	    	margin-bottom: 24px;
 	    }
@@ -247,7 +247,6 @@ html{
 ------------------------------------------------*/
 
 #contact{
-	margin-top: 100px;
 	.container{
 		display: grid;
 		grid-template-columns:3fr 2fr;
@@ -269,11 +268,10 @@ html{
 
 
 /*---------------------------------------------- 
-2. IMM-APPLICANTS PAGE
+3. IMM-APPLICANTS PAGE
 ------------------------------------------------*/
 
 #languageSelector{
-	margin-top:100px;
 	#languages{
 		h5{
 			text-align: center;
@@ -315,10 +313,7 @@ html{
 }
 
 #why-us{
-	.container{
-		display: grid;
-		grid-gap: 32px;
-	}
+
 }
 
 #video{
@@ -337,13 +332,134 @@ html{
 	}
 }
 
+/*---------------------------------------------- 
+3. IMM-PROFESSIONALS PAGE
+------------------------------------------------*/
+#immProff{
+	.container{
+		ul{
+			padding:0 2em ;
+			li{
+				list-style: inherit;
+			}
+		}
+	}
+}
+
+
+/*---------------------------------------------- 
+4. WHO-WE-ARE
+------------------------------------------------*/
+
+#who-we-are{
+	.container{
+		grid-gap: $gutterh/2;
+		
+		p{
+			margin-bottom: $gutterw / 4;
+		}
+	}
+}
 
 
 
+/*---------------------------------------------- 
+5. Why Us
+------------------------------------------------*/
+#why-us-main{
+	.container{
+		display: grid;
+		grid-template-columns: auto auto;
+		.whiteContainer{
+			padding: ($gutterh * 2) ($gutterh);
+			display: grid;
+			grid-column: span 2;
+			justify-self: center;
+			max-width: 850px;
+	    width: 100%;
+			
+			#whyus_list{
+				display: grid;
+				grid-gap: $gutterh;
+				grid-column: span 2;
+				margin-top: $gutterh / 2;
+				grid-template-columns: repeat(3, 1fr);
+		    text-align: center;
+				div{
+					display: grid;
+					grid-gap: 20px;
+					align-content:start;
+					justify-items: center;
+					.circle_shape{
+						background-color:rgba($brand1,0.05);
+						border-radius: 50%;
+						&:before{
+							content: ' ';
+							width:50px;
+							height:50px;
+						}
+					}
+				}
+			}
+		}
+		#letters_desktop{
+			display:none;
+
+			#letters{
+		    grid-auto-flow: column;
+		    justify-content: space-around;
+		    
+		    display: grid;
+				h3{
+					color:$brand1;
+					opacity: 0.3;
+					transition: all 0.5s ease;
+					&:hover{
+						opacity: 1;
+					}
+				}
+			}
+			#the_word{
+				position:relative;
+				height:40px;
+				display: grid;
+				justify-content: center;
+				align-content:end;
+				transition: all 1s ease;
+			}
 
 
-
-
+			@include MQ($M){
+				display: grid;
+			}
+		}
+		#letters_mobile{
+			h6{
+		    display: grid;    
+		    grid-template-columns: max-content auto;
+		    align-items: center;
+		    margin: ($gutterh / 6) 0;
+		    
+		    grid-gap: $gutterh / 8;
+		    border-radius:$border-radius;
+		    width: fit-content;
+				.big_letter{
+					width: 40px;
+					height: 40px;
+					justify-content: center;
+			    display: grid;
+		      align-items: center;
+		      background-color: $brand2;
+		      border-radius:$border-radius;
+		      color:$white;
+				}
+			}
+			@include MQ($M){
+				display: none;
+			}
+		}
+	}
+}
 
 
 
