--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -354,14 +354,11 @@ html{
 #who-we-are{
 	.container{
 		grid-gap: $gutterh/2;
-		
 		p{
 			margin-bottom: $gutterw / 4;
 		}
 	}
 }
-
-
 
 /*---------------------------------------------- 
 5. Why Us
@@ -369,21 +366,16 @@ html{
 #why-us-main{
 	.container{
 		display: grid;
-		grid-template-columns: auto auto;
 		.whiteContainer{
 			padding: ($gutterh * 2) ($gutterh);
 			display: grid;
-			grid-column: span 2;
 			justify-self: center;
 			max-width: 850px;
 	    width: 100%;
-			
 			#whyus_list{
 				display: grid;
 				grid-gap: $gutterh;
-				grid-column: span 2;
 				margin-top: $gutterh / 2;
-				grid-template-columns: repeat(3, 1fr);
 		    text-align: center;
 				div{
 					display: grid;
@@ -404,11 +396,9 @@ html{
 		}
 		#letters_desktop{
 			display:none;
-
 			#letters{
 		    grid-auto-flow: column;
 		    justify-content: space-around;
-		    
 		    display: grid;
 				h3{
 					color:$brand1;
@@ -439,7 +429,6 @@ html{
 		    grid-template-columns: max-content auto;
 		    align-items: center;
 		    margin: ($gutterh / 6) 0;
-		    
 		    grid-gap: $gutterh / 8;
 		    border-radius:$border-radius;
 		    width: fit-content;
@@ -458,9 +447,29 @@ html{
 				display: none;
 			}
 		}
+		@include MQ($M){
+			grid-template-columns: auto auto;
+			.whiteContainer{
+				grid-column: span 2;
+				#whyus_list{
+					grid-column: span 2;
+					grid-template-columns: repeat(3, 1fr);
+				}
+			}
+		}
 	}
 }
 
+/*---------------------------------------------- 
+5. Refer Accent
+------------------------------------------------*/
+#refer-accent{
+	.container{
+		.btnDark{
+			margin: ($gutterw / 2) 0;
+		}
+	}
+}
 
 
 
