--- a/dev/scss/modules/_classes.scss
+++ b/dev/scss/modules/_classes.scss
@@ -24,3 +24,19 @@ svg path{
 	}
 }
 
+#video{
+	.container{
+		width: 100%;
+		padding-bottom:56.25%;
+	    position:relative;
+	    height:0;
+		iframe{
+			left:0;
+		    top:0;
+		    height:100%;
+		    width:100%;
+		    position:absolute;
+		}
+	}
+}
+
