--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -373,13 +373,14 @@ html{
 					.circle_shape{
 						background-color:rgba($brand1,0.05);
 						border-radius: 50%;
-						&:before{
-							content: ' ';
-							width:50px;
-							height:50px;
-						}
 					}
 				}
+			}
+		}
+		.middleContainer{
+			align-self: start;
+			&.single{
+				grid-column: auto;
 			}
 		}
 		#letters_desktop{
