--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -210,6 +210,7 @@ header {
 		height: inherit;
 		width: inherit;
 		position: absolute;
-		padding: $gutterh;
+		padding: 0px;
+		top: 50px;
 	}
 }
